# wled-server

./: .dockerignore  .gitignore  API.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  E1.31-IMPLEMENTATION.md  README-DOCKER.md  README.md  boards.toml  deploy-to-beryl.sh  deploy-to-nas.sh  deploy.sh  docker-compose-published.yml  docker-compose.yml  docker-start.sh  lighttpd-docker.conf  lighttpd.conf  loopy-pro-light-sequencer-plan.md  loopy-pro-osc-docs.md  pattern-presets-teaching-plan.md  presets.json  restart.sh  spa-server.py  spacetimedb-rust-wled.md  sync_presets_to_squish.py  test-osc.sh  test_udp.py  three_presets_backup.json  wled-server-wrapper.sh  wled-server.init
.cargo/: config.toml
.claude/: settings.local.json
data/: .gitkeep  boards.toml.example
docs/: E131_UNIVERSE_CONFIGURATION.md
frontend/: .env.example  package.json  svelte.config.js  vite.config.ts
plans/: music-precision-issue.md
presets_backup/: 08dda6f3-a20e-4a88-8d03-ca989ee07760.json  105cf829-b059-41d5-a5c1-7b0bf0f7798d.json  342a45be-e177-48f6-85f0-d0e9f7b33a44.json  369af0ef-31d4-4189-9e00-ab91a44e5e21.json  43eb42ca-00b1-4a15-b76e-71d8bddc7c60.json  48b6c480-4bd4-472a-9d3b-86913b0475a4.json  4a15de65-bf50-413b-981c-f9945498d418.json  4d29f3ac-5983-4ba5-9046-64e982fee840.json  596de9f0-1e92-49a4-a76d-400009d62741.json  6e5ef518-adaf-47b2-8f2a-53404098b41f.json  7a88c007-8039-4baf-bf76-900c9cf7c22e.json  7c617888-8921-4a07-bf03-6b5a768c5e71.json  7ebb72af-988d-4082-a279-7202eedf71ab.json  800a6c61-9a59-4b5c-a7d2-afa9b0e784e7.json  88e60b47-0dab-48fd-8325-3ebc2ac48a48.json  (+8 more)
(+77 files in other folders)
