[package]
name = "rust-wled-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.21"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
futures-util = "0.3"
url = "2.5"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0"
rosc = "0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
